# 22s-final-project-joseph-g-and-ethan-z

./: CMakeLists.txt  DSAVLTree.h  DSHashTable.h  DocumentParser.cpp  DocumentParser.h  IndexHandler.cpp  IndexHandler.h  QueryProcessor.cpp  QueryProcessor.h  SearchEngine.cpp  SearchEngine.h  WordData.h  main.cpp  porter2_stemmer.h
